--- a/index.html
+++ b/index.html
@@ -6,6 +6,39 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <div class="header">
+      <p class="title">Broadway Design</p>
+      <p>Home</p>
+      <p>Process</p>
+      <p>Work</p>
+      <p>Team</p>
+      <p>Contact</p>
+    </div>
+    <div class="bodytop">
+      <p class="ourprocess">Our Process</p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
+      <p class="subtitle">Identify</p>
+      <p class="text">We focus on the most important details.</p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
+      <p class="subtitle">Understand</p>
+      <p class="text">We study our projects inside and out</p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
+      <p class="subtitle">Execute</p>
+      <p class="text">We put everything we have into our work</p>
+    </div>
+    <div class="header">
+      <p class="newyork">Designed in New York</p>
+    </div>
+    <div class="bodybottom">
+      <p class="subtitle">Portfolio</p>
+      <p class="text">Coming Soon</p>
+      <p class="subtitle">Team</p>
+      <p class="text">We're Hireing!</p>
+      <p class="subtitle">Contact</p>
+      <p class="text">Phone: (555)555-5555></p>
+      <p class="text">E-mail: test@example.com</p>
+      <p class="text">Twitter: @test</p>
+    </div>
 
   </body>
 </html>
