--- a/index.html
+++ b/index.html
@@ -6,38 +6,45 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="header">
-      <p class="title">Broadway Design</p>
-      <p>Home</p>
-      <p>Process</p>
-      <p>Work</p>
-      <p>Team</p>
-      <p>Contact</p>
+    <div id="home">
+      <p class="px70 bold white">Broadway Design</p>
+      <p class="px18"><a href="#home">Home</a></p>
+      <p class="px18"><a href="#process">Process</a></p>
+      <p class="px18"><a href="#work">Work</a></p>
+      <p class="px18"><a href="#team">Team</a></p>
+      <p class="px18"><a href="#contact">Contact</a></p>
     </div>
-    <div class="bodytop">
-      <p class="ourprocess">Our Process</p>
+    <div id="process">
+      <p class="px32 bold center">Our Process</p>
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
-      <p class="subtitle">Identify</p>
-      <p class="text">We focus on the most important details.</p>
+      <p class="px23 bold center">Identify</p>
+      <p class="px14 center">We focus on the most important details.</p>
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
-      <p class="subtitle">Understand</p>
-      <p class="text">We study our projects inside and out</p>
+      <p class="px23 bold center">Understand</p>
+      <p class="px14 center">We study our projects inside and out</p>
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
-      <p class="subtitle">Execute</p>
-      <p class="text">We put everything we have into our work</p>
+      <p class="px23 bold center">Execute</p>
+      <p class="px14 center">We put everything we have into our work</p>
     </div>
-    <div class="header">
-      <p class="newyork">Designed in New York</p>
+    <div class="newyork">
+      <p class="px23 bold white center">Designed in New York</p>
     </div>
-    <div class="bodybottom">
-      <p class="subtitle">Portfolio</p>
-      <p class="text">Coming Soon</p>
-      <p class="subtitle">Team</p>
-      <p class="text">We're Hireing!</p>
-      <p class="subtitle">Contact</p>
-      <p class="text">Phone: (555)555-5555></p>
-      <p class="text">E-mail: test@example.com</p>
-      <p class="text">Twitter: @test</p>
+    <div id="work">
+      <p class="px23 bold center">Portfolio</p>
+      <p class="px14 center">Coming Soon</p>
+    </div>
+    <div id="team">
+      <p class="px23 bold center">Team</p>
+      <p class="px14 center">We're Hireing!</p>
+    </div>
+    <div id="contact">
+      <p class="px23 bold center">Contact</p>
+      <p class="px14 center">Phone: (555)555-5555></p>
+      <p class="px14 center">E-mail: test@example.com</p>
+      <p class="px14 center">Twitter: @test</p>
+    </div>
+    <div class="footer">
+      <p>&copy; Broadway 2016</p>
     </div>
 
   </body>
