Completed footer code

--- a/index.html
+++ b/index.html
@@ -44,8 +44,12 @@
       <p class="px14 center">Twitter: @test</p>
     </div>
     <div class="footer">
-      <p>&copy; Broadway 2016</p>
+      <p>&copy; Broadway 2016 <a class="px18" href="#home">Home</a>
+        <a class="px18" href="#home">About</a>
+        <a class="px18" href="#home">Work</a>
+        <a class="px18" href="#home">Team</a>
+        <a class="px18" href="#home">Contact</a>
+      </p>
     </div>
-
   </body>
 </html>
